dentro del div de contenido creo un div de logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <header>
         <div class="contenido">
 
+            <div class="logo">
+
+            </div>
+
         </div>
     </header>
     
