dentro del div de logo creo un img del logo que quiero

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="contenido">
 
             <div class="logo">
-
+                <img src="imagenes/imagen.jpg.png" height="80px">
             </div>
 
         </div>
