creo un div de encabezado

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <img src="imagenes/imagen.jpg.png" height="80px">
             </div>
 
+            <div class="encabezado">
+
+            </div>
+
         </div>
     </header>
     
