--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
             <div class="encabezado">
 
+                <nav>
+                    
+                </nav>
+
             </div>
 
         </div>
