dentro de la lista desordenada creo un li y le pongo la info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <nav>
                     <ul>
-                        
+                        <li>Carrera: Tecnico Programador</li>
                     </ul>
 
                 </nav>
