dentro de la lista desordenada creo tres li y le pongo la info

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <nav>
                     <ul>
                         <li>Carrera: Tecnico Programador</li>
+                        <li>Apellido: Olguin</li>
+                        <li>Nombre: Kevin Lautaro</li>
+                        <li>Email: lautaroolguin89@gmail.com</li>
                     </ul>
 
                 </nav>
