--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="parent">
         <div class="titulo">
-
+            <h1>Trabajo Practico N° 6 de Investigacion de JS</h1>
         </div>
     </div>
     
