fuera del div parent creo otro div de preguntas-respuestas

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <h1>Trabajo Practico N° 6 de Investigacion de JS</h1>
         </div>
     </div>
+
+    <div class="preguntas-respuestas">
+
+    </div>
     
 </body>
 </html>
