dentro del article creo un h2 con info

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="preguntas-respuestas">
         <article>
-            
+            <h2>Preguntas:</h2>
         </article>
 
     </div>
