en article tambien creo una p con las preguntas

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
     <div class="preguntas-respuestas">
         <article>
             <h2>Preguntas:</h2>
+            <p>1) ¿Qué versiones de JavaScript hay en el mercado?.<br>
+                2) ¿Cómo se integra JavaScript a HTML?.<br>
+                3) ¿Cómo es el manejo de las variables, tipos de datos y expresiones regulares en JS?.<br>
+                4) ¿Cómo son todas las formas de declaración de funciones en JS?.<br>
+                5) ¿Cuáles son los operadores y conversión entre tipos?.<br>
+                6) ¿Cuáles son las estructura de control de JS?.<br>
+                7) ¿Qué es el objeto dom en JS? Y ¿Cómo trabaja?.<br>
+                8) ¿Qué función tiene en JS el Object Map?.<br>
+                9) ¿Cuáles son todos los eventos que trabaja JS?.<br>
+                10) Con toda la investigación que generaron deben de generar un formulario que realice las
+                siguientes funciones.<br>
+                    a. ¿Qué obtenga los datos del input?.<br>
+                    b. ¿Qué verifique los datos que se ingresan en el input?.<br>
+                    c. ¿Qué el formulario presente una calculo de sumatoria para validar ¿Qué no sos
+                    un robot”?.<br> </p>
         </article>
 
     </div>
