en article tambien creo otro h2 con info

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     b. ¿Qué verifique los datos que se ingresan en el input?.<br>
                     c. ¿Qué el formulario presente una calculo de sumatoria para validar ¿Qué no sos
                     un robot”?.<br> </p>
+
+                    <h2>Respuestas:</h2>
         </article>
 
     </div>
