--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                     <p>1)
                         2) Para integrar JavaScript a HTML existen tres formas para hacerlo una de las formas seria: <br>
                             a)Hacer un nuevo documento en la carpeta donde tenes el index y style, este documento tiene que llevar el nombre que quieras
-                            un ejemplo seria "nuevodocum.js" es importante que diga js si no, no se va a crear y despues en el index tenes que poner 
-                            "script src"nuevodocum.js". <br>
+                            un ejemplo seria "nuevodocum.js" es importante que diga js si no, no se va a crear y despues en el index dentro de body tenes 
+                            que poner "script src"nuevodocum.js". <br>
+                            ejemplo de como seria: <br>
+
                         3)
                         4)
                         5)
