--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             un ejemplo seria "nuevodocum.js" es importante que diga js si no, no se va a crear y despues en el index dentro de body tenes 
                             que poner "script src"nuevodocum.js". <br>
                             ejemplo de como seria: <br>
+                            <img src="imagenes/pureva.jpg">
 
                         3)
                         4)
