--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                             un ejemplo seria "nuevodocum.js" es importante que diga js si no, no se va a crear y despues en el index dentro de body tenes 
                             que poner "script src"nuevodocum.js". <br>
                             ejemplo de como seria: <br>
-                            <img src="imagenes/pureva.jpg">
+                            <img src="imagenes/pureva.jpg"> <br>
+                            <img src="imagenes/prueva2.jpg"> <br>
 
                         3)
                         4)
