--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                             ejemplo de como seria: <br>
                             <img src="imagenes/pureva.jpg"> <br>
                             <img src="imagenes/prueva2.jpg"> <br>
+                            <img src="imagenes/prueba3.jpg"> <br>
 
                         3)
                         4)
