--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                             <img src="imagenes/pureva.jpg"> <br>
                             <img src="imagenes/prueva2.jpg"> <br>
                             <img src="imagenes/prueba3.jpg"> <br>
+                            b)Para hacer la segunda inserccion de js en html seria que en una etiqueta tienes que poner en la etiqueta "onclick" = "alert"
+                            y lo que quieras poner un ejemplo seria Hola mundo. <br>
 
                         3)
                         4)
