coloco imagen de ejemplo

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                             <img src="imagenes/prueba3.jpg"> <br>
                             b)Para hacer la segunda inserccion de js en html seria que en una etiqueta tienes que poner en la etiqueta "onclick" = "alert"
                             y lo que quieras poner un ejemplo seria Hola mundo. <br>
+                            <img src="imagenes/prueba4.jpg"> <br>
 
                         3)
                         4)
