--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                             b)Para hacer la segunda inserccion de js en html seria que en una etiqueta tienes que poner en la etiqueta "onclick" = "alert"
                             y lo que quieras poner un ejemplo seria Hola mundo. <br>
                             <img src="imagenes/prueba4.jpg"> <br>
+                            c)Para la ultima inserccion lo que hay que hacer es que dentro del html tenes que poner "script" "/script" y dentro del script 
+                            tenes que poner el codigo que quieras o el mensaje. <br>
 
                         3)
                         4)
