--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             <img src="imagenes/prueba4.jpg"> <br>
                             c)Para la ultima inserccion lo que hay que hacer es que dentro del html tenes que poner "script" "/script" y dentro del script 
                             tenes que poner el codigo que quieras o el mensaje. <br>
+                            <img src="imagenes/prueba5.jpg"> <br>
 
                         3)
                         4)
