--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             tenes que poner el codigo que quieras o el mensaje. <br>
                             <img src="imagenes/prueba5.jpg"> <br>
 
-                        3)
+                        3) Manejo de variables en JS:<br>
                         4)
                         5)
                         6)
