--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                             <img src="imagenes/prueba5.jpg"> <br>
 
                         3) Manejo de variables en JS:<br>
+                            Las variables se pueden declarar usando var, const o let. Var tiene alcance de funciones, mientas que const y let tiene alcance 
+                            de bloque, las variables de const no pueden ser reasignada, mientas que la variables let si pueden reasignada. <br>
                         4)
                         5)
                         6)
