--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         3) Manejo de variables en JS:<br>
                             Las variables se pueden declarar usando var, const o let. Var tiene alcance de funciones, mientas que const y let tiene alcance 
                             de bloque, las variables de const no pueden ser reasignada, mientas que la variables let si pueden reasignada. <br>
+                        Manejo de tipos de datos en JS: <br>
                         4)
                         5)
                         6)
