--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                             Las variables se pueden declarar usando var, const o let. Var tiene alcance de funciones, mientas que const y let tiene alcance 
                             de bloque, las variables de const no pueden ser reasignada, mientas que la variables let si pueden reasignada. <br>
                         Manejo de tipos de datos en JS: <br>
+                            En JS existen 7 tipos de datos que estos son:
                         4)
                         5)
                         6)
