creo un li y le pongo info

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Manejo de tipos de datos en JS: <br>
                             En JS existen 7 tipos de datos que estos son:
                             <ul>
-                                
+                                <li>String Cadenas de texto.</li>
                             </ul>
                         4)
                         5)
