creo un li y le pongo info

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                             En JS existen 7 tipos de datos que estos son:
                             <ul>
                                 <li>String Cadenas de texto.</li>
+                                <li>Number Valores numéricos.</li>
+                                <li>Boolean Representa una entidad lógica y puede tener dos valores: true y false.</li>
+                                <li>null Es un valor asignado tiene el valor de “no valor”.</li>
+                                <li>undefined Una variable a la que no se le ha asignado ningún valor tiene el valor undefined.</li>
                             </ul>
                         4)
                         5)
