manejo de expresiones

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                                 <li>null Es un valor asignado tiene el valor de “no valor”.</li>
                                 <li>undefined Una variable a la que no se le ha asignado ningún valor tiene el valor undefined.</li>
                             </ul>
+
+                        Manejo de expresiones regulares en JS: <br>
                         4)
                         5)
                         6)
