forma de declaracion de funciones

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         Las expresiones regulares son patrones utilizados para encontrar una determinada combinación de caracteres dentro de una cadena de texto. 
                         Las expresiones regulares proporcionan una manera muy flexible de buscar o reconocer cadenas de texto. Las expresiones regulares se utilizan 
                         con los métodos RegExp test() y exec() y con los métodos de String , match() , replace() , search() y split() . <br>
-                        4)
+                        
+                        4) Las formas de declaracion de funciones en JS es: <br>
                         5)
                         6)
                         7)
