--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         
                         4) Las formas de declaracion de funciones en JS es: <br>
                             <ul>
-                                
+                                <li>Function declaration.</li>
                             </ul>
                         5)
                         6)
