--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                         4) Las formas de declaracion de funciones en JS es: <br>
                             <ul>
                                 <li>Function declaration.</li>
+                                <li>Function expression.</li>
+                                <li>IIFE (Immediately Invoked Function Expression)</li>
+                                <li>Shorthand method definition.</li>
+                                <li>Arrow function.</li>
+                                <li>Generator function.</li>
+                                <li>Function constructor.</li>
                             </ul>
                         5)
                         6)
