tipos de conversiones

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <li>Function constructor.</li>
                             </ul> <br>
                         <br>
-                        5)
+                        5) En JavaScript se urilizan 3 tipos de conversiones: <br>
                         6)
                         7)
                         8)
