descripcion de tostring

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                             </ul> <br>
                         <br>
                         5) En JavaScript se urilizan 3 tipos de conversiones: <br>
+                        ToString:
                         6)
                         7)
                         8)
