descripcion de tostring value

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <br>
                         5) En JavaScript se urilizan 3 tipos de conversiones: <br>
                         ToString:
+                        Ocurre cuando se muestra algo. El String se realiza con "string(value)".
                         6)
                         7)
                         8)
