--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                         5) En JavaScript se urilizan 3 tipos de conversiones: <br>
                         ToString:
                         Ocurre cuando se muestra algo. El String se realiza con "string(value)".
+                        ToNumber:
+                        Ocurre en operaciones matematicas. El number se realiza con "number(value)".
                         6)
                         7)
                         8)
