descripcion de toboolean

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                         Ocurre cuando se muestra algo. El String se realiza con "string(value)".
                         ToNumber:
                         Ocurre en operaciones matematicas. El number se realiza con "number(value)".
+                        ToBoolean:
+                        Ocurre en operaciones logicas. El boolean se realiza con "boolean(value)".
+                        Pagina de la informacion de la conversiones
                         6)
                         7)
                         8)
