--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                         ToBoolean:
                         Ocurre en operaciones logicas. El boolean se realiza con "boolean(value)".
                         Pagina de la informacion de la conversiones
+                        Operadores:
+                        Los operadores permiten manipular los valores de las variables, realizar operaciones matematicas con los valores de las variables y comparar 
+                        diferentes variables.
                         6)
                         7)
                         8)
