tipo de operadores

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                         Operadores:
                         Los operadores permiten manipular los valores de las variables, realizar operaciones matematicas con los valores de las variables y comparar 
                         diferentes variables.
+
+                        Tipos de operadores:
+                        
                         6)
                         7)
                         8)
