descripcion de asignacion

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                         diferentes variables.
 
                         Tipos de operadores:
-                        
+                        Asignacion:
+                        Este operador se utiliza para gusrdar un valor especifico dentro de una variable. Ejemplo: "var num1 = 3;"
                         6)
                         7)
                         8)
