descripcion de incremento y decremento

--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
                         Tipos de operadores:
                         Asignacion:
                         Este operador se utiliza para gusrdar un valor especifico dentro de una variable. Ejemplo: "var num1 = 3;"
+
+                        Incremento y decremento:
+                        Estos operadores solo son validos para variables numericas y se utilizan para aunmentar o restar en 1 el valor de una variable. El incremento se indica con el prefijo "++" y el decremento con el prefijo "--".
+                        Ejemplo: var num1 = 3;
+                        ++num1;
+                        alert(num1);
+                        var num2 = 3;
+                        ++num2;
+                        alert(num2);
                         6)
                         7)
                         8)
