descripcion de negacion

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                         Logicos:
                         Los operadores logicos son sumamente necesarios para realizar operaciones complejas, ya que se utilizan para tomar decisiones sobre las instrucciones 
                         que deberia ejecutar el programa en funcion a ciertas condiciones.
+
+                        Negacion:
+                        Se utiliza para obtener el valor contrario al valor de una variable. Ejemplo:var visible = true;
+                        alert(!visible);
                         6)
                         7)
                         8)
