descripcion de and

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
                         Negacion:
                         Se utiliza para obtener el valor contrario al valor de una variable. Ejemplo:var visible = true;
                         alert(!visible);
+
+                        AND:
+                        La operacion logica AND obtiene sus resultados combinando dos valores booleanos. El operador se indica con dos && y el resultado solamente sera true 
+                        si los 2 valores son true. Ejemplo:var valor1 = true;
+                        var valor2 = false;
+                        resultado = valor1 && valor2; //el resultado el "false".
+                        var valor1 = true;
+                        var valor2 = true;
+                        resultado = valor1 && valor2; //el resultado el "true".
                         6)
                         7)
                         8)
