descripcion de or

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
                         var valor1 = true;
                         var valor2 = true;
                         resultado = valor1 && valor2; //el resultado el "true".
+
+                        OR:
+                        El operador OR funciona de la misma manera que el operador AND pero este tiene la caracteristica de que el resultado sera true si alguno de las 2 valores 
+                        es true. Tambien este se identifica con 2 palos "||" Ejemplo:var valor1 = true;
+                        var valor2 = false;
+                        resultado = valor1 || valor2; //el resultado el "true".
+                        var valor1 = false;
+                        var valor2 = false;
+                        resultado = valor1 || valor2; //el resultado el "false".
                         6)
                         7)
                         8)
