descripcion de matematicos

--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
                         var valor1 = false;
                         var valor2 = false;
                         resultado = valor1 || valor2; //el resultado el "false".
+
+                        Matematicos:
+                        Permite ralizar operaciones matematicas sobre el valor de las variables numericas. Los operadores que maneja son suma(+), resta(-), multiplicacion(*), 
+                        division(/), modulo(%). Ejemplo:var num1 = 10;
+                        var num2 = 5;
+                        resultado = num1 + num2;//resultado 15
+                        resultado = num1 - num2;//resultado 5
+                        resultado = num1 * num2;//resultado 50
+                        resultado = num1 / num2;//resultado 2
+                        resultado = num1 % num2;//resultado 0
                         6)
                         7)
                         8)
