descripcion de relacionales

--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
                         resultado = num1 * num2;//resultado 50
                         resultado = num1 / num2;//resultado 2
                         resultado = num1 % num2;//resultado 0
+
+                        Relacionales:
+                        Los operadores relacionales estan definidos casi de la misma manera que los operadores matematicos: mayor que (>), menor que (<), mayor o igual (>=), 
+                        menor o igual(<=), igual que (==), distinto que (!=). Ejemplo:var num1 = 5;
+                        var num2 = 10;
+                        resultado = num1 > num2;//resultado "false"
+                        resultado = num1 < num2;//resultado "true"
+                        resultado = num1 >= num2;//resultado "true"
+                        resultado = num1 <= num2;//resultado "true"
+                        resultado = num1 == num2;//resultado "true"
+                        resultado = num1 != num2;//resultado "false"
                         6)
                         7)
                         8)
