colocando los br

--- a/index.html
+++ b/index.html
@@ -110,77 +110,86 @@
                             </ul> <br>
                         <br>
                         5) En JavaScript se urilizan 3 tipos de conversiones: <br>
-                        ToString:
-                        Ocurre cuando se muestra algo. El String se realiza con "string(value)".
-                        ToNumber:
-                        Ocurre en operaciones matematicas. El number se realiza con "number(value)".
-                        ToBoolean:
-                        Ocurre en operaciones logicas. El boolean se realiza con "boolean(value)".
-                        Pagina de la informacion de la conversiones
-                        Operadores:
+                        ToString: <br>
+                        Ocurre cuando se muestra algo. El String se realiza con "string(value)". <br>
+                        ToNumber: <br>
+                        Ocurre en operaciones matematicas. El number se realiza con "number(value)". <br>
+                        ToBoolean: <br>
+                        Ocurre en operaciones logicas. El boolean se realiza con "boolean(value)". <br>
+                        
+                        <br>
+                        Operadores: <br>
                         Los operadores permiten manipular los valores de las variables, realizar operaciones matematicas con los valores de las variables y comparar 
-                        diferentes variables.
+                        diferentes variables. <br>
 
-                        Tipos de operadores:
-                        Asignacion:
-                        Este operador se utiliza para gusrdar un valor especifico dentro de una variable. Ejemplo: "var num1 = 3;"
+                        <br>
+                        Tipos de operadores: <br>
+                        Asignacion: <br>
+                        Este operador se utiliza para gusrdar un valor especifico dentro de una variable. Ejemplo: "var num1 = 3;" <br>
 
-                        Incremento y decremento:
+                        <br>
+                        Incremento y decremento: <br>
                         Estos operadores solo son validos para variables numericas y se utilizan para aunmentar o restar en 1 el valor de una variable. El incremento 
-                        se indica con el prefijo "++" y el decremento con el prefijo "--".
-                        Ejemplo: var num1 = 3;
-                        ++num1;
-                        alert(num1);
-                        var num2 = 3;
-                        ++num2;
-                        alert(num2);
+                        se indica con el prefijo "++" y el decremento con el prefijo "--". <br>
+                        Ejemplo: var num1 = 3; <br>
+                        ++num1; <br>
+                        alert(num1); <br>
+                        var num2 = 3; <br>
+                        ++num2; <br>
+                        alert(num2); <br>
 
-                        Logicos:
+                        <br>
+                        Logicos: <br>
                         Los operadores logicos son sumamente necesarios para realizar operaciones complejas, ya que se utilizan para tomar decisiones sobre las instrucciones 
-                        que deberia ejecutar el programa en funcion a ciertas condiciones.
+                        que deberia ejecutar el programa en funcion a ciertas condiciones. <br>
 
-                        Negacion:
-                        Se utiliza para obtener el valor contrario al valor de una variable. Ejemplo:var visible = true;
-                        alert(!visible);
+                        <br>
+                        Negacion: <br>
+                        Se utiliza para obtener el valor contrario al valor de una variable. Ejemplo:var visible = true; <br>
+                        alert(!visible); <br>
 
-                        AND:
+                        <br>
+                        AND: <br>
                         La operacion logica AND obtiene sus resultados combinando dos valores booleanos. El operador se indica con dos && y el resultado solamente sera true 
-                        si los 2 valores son true. Ejemplo:var valor1 = true;
-                        var valor2 = false;
-                        resultado = valor1 && valor2; //el resultado el "false".
-                        var valor1 = true;
-                        var valor2 = true;
-                        resultado = valor1 && valor2; //el resultado el "true".
+                        si los 2 valores son true. Ejemplo:var valor1 = true; <br>
+                        var valor2 = false; <br>
+                        resultado = valor1 && valor2; //el resultado el "false". <br>
+                        var valor1 = true; <br>
+                        var valor2 = true; <br>
+                        resultado = valor1 && valor2; //el resultado el "true". <br>
 
-                        OR:
+                        <br>
+                        OR: <br>
                         El operador OR funciona de la misma manera que el operador AND pero este tiene la caracteristica de que el resultado sera true si alguno de las 2 valores 
-                        es true. Tambien este se identifica con 2 palos "||" Ejemplo:var valor1 = true;
-                        var valor2 = false;
-                        resultado = valor1 || valor2; //el resultado el "true".
-                        var valor1 = false;
-                        var valor2 = false;
-                        resultado = valor1 || valor2; //el resultado el "false".
+                        es true. Tambien este se identifica con 2 palos "||" Ejemplo:var valor1 = true; <br>
+                        var valor2 = false; <br>
+                        resultado = valor1 || valor2; //el resultado el "true". <br>
+                        var valor1 = false; <br>
+                        var valor2 = false; <br>
+                        resultado = valor1 || valor2; //el resultado el "false". <br>
 
-                        Matematicos:
+                        <br>
+                        Matematicos: <br>
                         Permite ralizar operaciones matematicas sobre el valor de las variables numericas. Los operadores que maneja son suma(+), resta(-), multiplicacion(*), 
-                        division(/), modulo(%). Ejemplo:var num1 = 10;
-                        var num2 = 5;
-                        resultado = num1 + num2;//resultado 15
-                        resultado = num1 - num2;//resultado 5
-                        resultado = num1 * num2;//resultado 50
-                        resultado = num1 / num2;//resultado 2
-                        resultado = num1 % num2;//resultado 0
-
-                        Relacionales:
+                        division(/), modulo(%). Ejemplo:var num1 = 10; <br>
+                        var num2 = 5; <br>
+                        resultado = num1 + num2;//resultado 15 <br>
+                        resultado = num1 - num2;//resultado 5 <br>
+                        resultado = num1 * num2;//resultado 50 <br>
+                        resultado = num1 / num2;//resultado 2 <br>
+                        resultado = num1 % num2;//resultado 0 <br>
+                            
+                        <br>
+                        Relacionales: <br>
                         Los operadores relacionales estan definidos casi de la misma manera que los operadores matematicos: mayor que (>), menor que (<), mayor o igual (>=), 
-                        menor o igual(<=), igual que (==), distinto que (!=). Ejemplo:var num1 = 5;
-                        var num2 = 10;
-                        resultado = num1 > num2;//resultado "false"
-                        resultado = num1 < num2;//resultado "true"
-                        resultado = num1 >= num2;//resultado "true"
-                        resultado = num1 <= num2;//resultado "true"
-                        resultado = num1 == num2;//resultado "true"
-                        resultado = num1 != num2;//resultado "false"
+                        menor o igual(<=), igual que (==), distinto que (!=). Ejemplo:var num1 = 5; <br>
+                        var num2 = 10; <br>
+                        resultado = num1 > num2;//resultado "false" <br>
+                        resultado = num1 < num2;//resultado "true" <br>
+                        resultado = num1 >= num2;//resultado "true" <br>
+                        resultado = num1 <= num2;//resultado "true" <br>
+                        resultado = num1 == num2;//resultado "true" <br>
+                        resultado = num1 != num2;//resultado "false" <br>
                         6)
                         7)
                         8)
