--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                         resultado = num1 != num2;//resultado "false" <br>
 
                         <br>
-                        6)
+                        6) Estructura de control de JS:
+                        Las estructuras de control de flujo, son intrucciones que nos permiten evaluar si se puede cumplir una condición o no, incluso nos puede ayudar a evaluarla n cantidad de veces.
                         7)
                         8)
                         9)
