estructura mas utilizadas

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
                         <br>
                         6) Estructura de control de JS:
                         Las estructuras de control de flujo, son intrucciones que nos permiten evaluar si se puede cumplir una condición o no, incluso nos puede ayudar a evaluarla n cantidad de veces.
+
+                        Las estuctura de control son las siguientes:
                         7)
                         8)
                         9)
