--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                         Las estructuras de control de flujo, son intrucciones que nos permiten evaluar si se puede cumplir una condición o no, incluso nos puede ayudar a evaluarla n cantidad de veces.
 
                         Las estuctura de control son las siguientes:
+                        if:
+                        la estructura más utilizada en JavaScript y en la mayoría de lenguajes de programación es la estructura if . Se emplea 
+                        para tomar decisiones en función de una condición. Su definición formal es: if(condicion) { ... } <br>
                         7)
                         8)
                         9)
