--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                         if:
                         la estructura más utilizada en JavaScript y en la mayoría de lenguajes de programación es la estructura if . Se emplea 
                         para tomar decisiones en función de una condición. Su definición formal es: if(condicion) { ... } <br>
+                        <img src="imagenes/if.jpg">
                         7)
                         8)
                         9)
