colocando imagen de if2

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                         la estructura más utilizada en JavaScript y en la mayoría de lenguajes de programación es la estructura if . Se emplea 
                         para tomar decisiones en función de una condición. Su definición formal es: if(condicion) { ... } <br>
                         <img src="imagenes/if.jpg">
+                        <img src="imagenes/if2.jpg">
                         7)
                         8)
                         9)
