estructura de control bucles

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
                         <img src="imagenes/if.jpg">
                         <img src="imagenes/if2.jpg">
 
+                        ciclos, bucles o loops:
+                        Se le pueden llamar, ciclos, bucles o loops, en ellos se evalua una condición n veces hasta que esta se cumpla. En estos podemos encontrar los for, while, entre otros.
+
+
 
                         7)
                         8)
