--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                         ciclos, bucles o loops:
                         Se le pueden llamar, ciclos, bucles o loops, en ellos se evalua una condición n veces hasta que esta se cumpla. En estos podemos encontrar los for, while, entre otros.
 
-
+                        for:
+                        Un bucle for se repite como mencione hasta que la condición que se esta evaluando se cumpla.
 
                         7)
                         8)
