colocando imagen de for

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 
                         for:
                         Un bucle for se repite como mencione hasta que la condición que se esta evaluando se cumpla.
+                        <img src="imagenes/for.jpg">
 
                         7)
                         8)
