estructura de control while

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
                         Un bucle for se repite como mencione hasta que la condición que se esta evaluando se cumpla.
                         <img src="imagenes/for.jpg">
 
+                        while:
+                        Ejecuta una sentencia mientras la condición que se este evaluando sea verdadera.
+
                         7)
                         8)
                         9)
