colocando imagen de while

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
                         while:
                         Ejecuta una sentencia mientras la condición que se este evaluando sea verdadera.
+                        <img src="imagenes/while.jpg">
 
                         7)
                         8)
