--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
                         Ejecuta una sentencia mientras la condición que se este evaluando sea verdadera.
                         <img src="imagenes/while.jpg">
 
+                        switch:
+                        Permite evaluar una expresión e intenta igual el valor de esa expresión a una etiqueta llamada case, que es el caso a evaluar. En el caso de que la condición se cumpla o 
+                        lo que tiene el case, se ejecuta la sentencia que este en ese caso. En el switch se usa una sentencia llamada “break”, esta nos permite salir de la condición que se esta evaluando.
+
+
+
                         7)
                         8)
                         9)
