colocando los br

--- a/index.html
+++ b/index.html
@@ -192,35 +192,40 @@
                         resultado = num1 != num2;//resultado "false" <br>
 
                         <br>
-                        6) Estructura de control de JS:
-                        Las estructuras de control de flujo, son intrucciones que nos permiten evaluar si se puede cumplir una condición o no, incluso nos puede ayudar a evaluarla n cantidad de veces.
+                        6) Estructura de control de JS: <br>
+                        Las estructuras de control de flujo, son intrucciones que nos permiten evaluar si se puede cumplir una condición o no, incluso nos puede ayudar a evaluarla n cantidad de veces. <br>
 
-                        Las estuctura de control son las siguientes:
-                        if:
+                        <br>
+                        Las estuctura de control son las siguientes: <br>
+                        if: <br>
                         la estructura más utilizada en JavaScript y en la mayoría de lenguajes de programación es la estructura if . Se emplea 
                         para tomar decisiones en función de una condición. Su definición formal es: if(condicion) { ... }, Los condicionales nos permiten evaluar si una condición cumple o no con lo que 
                         estemos evaluando. Su sintaxis es muy sencilla, podemos evaluar si la condición es verdadera o falsa. Incluso añadir una condición intermedia en el caso de que no se cumpla la primera 
                         condición y se deban evaluar más. <br>
-                        <img src="imagenes/if.jpg">
-                        <img src="imagenes/if2.jpg">
+                        <img src="imagenes/if.jpg"> <br>
+                        <img src="imagenes/if2.jpg"> <br>
 
-                        ciclos, bucles o loops:
-                        Se le pueden llamar, ciclos, bucles o loops, en ellos se evalua una condición n veces hasta que esta se cumpla. En estos podemos encontrar los for, while, entre otros.
+                        <br>
+                        ciclos, bucles o loops: <br>
+                        Se le pueden llamar, ciclos, bucles o loops, en ellos se evalua una condición n veces hasta que esta se cumpla. En estos podemos encontrar los for, while, entre otros. <br>
 
-                        for:
-                        Un bucle for se repite como mencione hasta que la condición que se esta evaluando se cumpla.
-                        <img src="imagenes/for.jpg">
+                        <br>
+                        for: <br>
+                        Un bucle for se repite como mencione hasta que la condición que se esta evaluando se cumpla. <br>
+                        <img src="imagenes/for.jpg"> <br>
 
-                        while:
-                        Ejecuta una sentencia mientras la condición que se este evaluando sea verdadera.
-                        <img src="imagenes/while.jpg">
+                        <br>
+                        while: <br>
+                        Ejecuta una sentencia mientras la condición que se este evaluando sea verdadera. <br>
+                        <img src="imagenes/while.jpg"> <br>
 
-                        switch:
+                        <br>
+                        switch: <br>
                         Permite evaluar una expresión e intenta igual el valor de esa expresión a una etiqueta llamada case, que es el caso a evaluar. En el caso de que la condición se cumpla o 
-                        lo que tiene el case, se ejecuta la sentencia que este en ese caso. En el switch se usa una sentencia llamada “break”, esta nos permite salir de la condición que se esta evaluando.
-                        <img src="imagenes/switch.jpg">
+                        lo que tiene el case, se ejecuta la sentencia que este en ese caso. En el switch se usa una sentencia llamada “break”, esta nos permite salir de la condición que se esta evaluando. <br>
+                        <img src="imagenes/switch.jpg"> <br>
 
-
+                        <br>
                         7)
                         8)
                         9)
