--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <img src="imagenes/switch.jpg"> <br>
 
                         <br>
-                        7)
+                        7) El objeto dom es: <br>
                         8)
                         9)
                         10)a)
