descripcion de objeto dom

--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
 
                         <br>
                         7) El objeto dom es: <br>
+                        DOM significa Document Object Model, en español sería Modelo de Objetos del Documento. Es una interfaz de programación que nos permite crear, cambiar, o remover elementos del documento. 
+                        También podemos agregar eventos a esos elementos para hacer más dinámica nuestra página. <br>
+                        El DOM representa un documento HTML completo como un solo objeto. Para crear el DOM, el navegador web que lee el archivo HTML toma todas sus partes, desde el elemento "html" raíz hasta 
+                        las etiquetas "span" más pequeñas, y las devuelve como un objeto que el JavaScript comprende. <br>
                         8)
                         9)
                         10)a)
