tipos de eventos

--- a/index.html
+++ b/index.html
@@ -231,8 +231,14 @@
                         También podemos agregar eventos a esos elementos para hacer más dinámica nuestra página. <br>
                         El DOM representa un documento HTML completo como un solo objeto. Para crear el DOM, el navegador web que lee el archivo HTML toma todas sus partes, desde el elemento "html" raíz hasta 
                         las etiquetas "span" más pequeñas, y las devuelve como un objeto que el JavaScript comprende. <br>
-                        8)
-                        9)
+
+                        <br>
+                        8) object map js:
+                        El map() te permite iterar sobre un arreglo y modificar sus elementos utilizando una función callback. La función callback se ejecutará entonces en cada uno de los elementos del arreglo. <br>
+                        El método map() crea un nuevo array con los resultados de la llamada a la función indicada aplicados a cada uno de sus elementos. <br>
+                        
+                        <br>
+                        9) Tipos de eventos: <br>
                         10)a)
                         b)
                         c)
