--- a/index.html
+++ b/index.html
@@ -60,7 +60,24 @@
                     <h2>Respuestas:</h2>
                     <p>1)Las versiones de Js son: <br>
                         <ul>
-                            
+                            <li>version de JavaScript</li>
+                                Version del navegador
+                                <li>JavaScript 1.0</li>
+                                Navegador 2.0
+                                <li>JavaScript 1.1</li>
+                                Navegador 3.0
+                                <li>JavaScript 1.2</li>
+                                Navegador 4.0-4.05
+                                <li>JavaScript 1.3</li>
+                                Navegador 4.06.4.7x
+                                <li>JavaScript 1.4</li>
+                                n/a
+                                <li>JavaScript 1.5</li>
+                                Navegador 6.0, Mozilla 0.6x-0.9x (Navegador de codigo abierto)
+                                <li>JavaScript 1.6</li>
+                                Mozilla Firefox 1.5
+                                <li>JavaScript 1.7</li>
+                                Mozilla Firebox 2
                         </ul>
                         2) Para integrar JavaScript a HTML existen tres formas para hacerlo una de las formas seria: <br>
                             a)Hacer un nuevo documento en la carpeta donde tenes el index y style, este documento tiene que llevar el nombre que quieras
